--- a/readme.org
+++ b/readme.org
@@ -46,8 +46,7 @@ export interface Ability {
 }
 #+end_quote
 
-* Exploration of JSON data
-** haskell setup
+* pragmas and imports
 
 #+begin_src haskell
 :r
@@ -67,18 +66,13 @@ import qualified Data.Aeson.KeyMap as A
 import Data.Aeson.Types
 import qualified Data.Text as Text
 import qualified Data.Vector as V
-(Just (Object v)) <- decode <$> B.readFile "other/sap.json" :: IO (Maybe Value)
-(Just (Object fs)) = lookup "foods" v
-(Just (Object ps)) = lookup "pets" v
-(Just (Object ss)) = lookup "statuses" v
-(Just (Object ts)) = lookup "turns" v
-length <$> [fs,ps,ss,ts]
+import System.Random
+import Control.Monad.State.Lazy
+import Optics.Extra
 #+end_src
 
-#+RESULTS:
-: > > > > > > > > > > > > > > > > > > > > > [17,89,10,11]
-
-** json file
+* initial JSON data exploration
+** json file as Value
 
 #+begin_src haskell
 (Just (Object v)) <- decode <$> B.readFile "other/sap.json" :: IO (Maybe Value)
@@ -90,7 +84,7 @@ length <$> [fs,ps,ss,ts]
 #+end_src
 
 #+RESULTS:
-| 17 | 89 | 10 | 11 |
+: > > > > [17,89,10,11]
 
 ** high level anaysis
 #+begin_src haskell :results output
@@ -1093,11 +1087,11 @@ take 3 [m | (Object m) <- mconcat $ snd <$> [(k,V.toList v) | (k,Just (Array v))
 #+RESULTS:
 | (food-apple Just (Number 1.0)) | (food-canned-food Just (Number 4.0)) | (food-chili Just (Number 5.0)) | (food-chocolate Just (Number 5.0)) | (food-cupcake Just (Number 2.0)) | (food-garlic Just (Number 3.0)) | (food-honey Just (Number 1.0)) | (food-meat-bone Just (Number 2.0)) | (food-melon Just (Number 6.0)) | (food-milk Just (String Summoned)) | (food-mushroom Just (Number 6.0)) | (food-pear Just (Number 4.0)) | (food-pizza Just (Number 6.0)) | (food-salad-bowl Just (Number 3.0)) | (food-sleeping-pill Just (Number 2.0)) | (food-steak Just (Number 6.0)) | (food-sushi Just (Number 5.0)) |
 
-* fromJSONs
+** FromJSON development
 
 I would guess that there are enough quirks that toJsons are impractical: the json data being used as the reference point is better thought of as immutable.
 
-** turns
+*** turns
 
 #+begin_src haskell
 (Just (Object ts)) = Data.Aeson.KeyMap.lookup "turns" v1
@@ -1140,7 +1134,7 @@ length turns
 :
 : 11
 
-** image
+*** image
 
 #+begin_src haskell
 putStrLn $ Text.unpack $ mconcat $ fmap snd $ [(k,u) |(k,(Just (String u))) <- [(k,Data.Aeson.KeyMap.lookup "unicodeCodePoint" m') |(k,Just (Object m')) <- [(k, Data.Aeson.KeyMap.lookup "image" m) | (k, Object m) <- toList fs]]]
@@ -1160,7 +1154,7 @@ fromJSON . snd <$> toList fs :: [Result Emoji]
 #+RESULTS:
 | Success | (Emoji (char = \127822)) | Success | (Emoji (char = \129387)) | Success | (Emoji (char = \127798)) | Success | (Emoji (char = \127851)) | Success | (Emoji (char = \129473)) | Success | (Emoji (char = \129476)) | Success | (Emoji (char = \127855)) | Success | (Emoji (char = \127830)) | Success | (Emoji (char = \127816)) | Success | (Emoji (char = \129371)) | Success | (Emoji (char = \127812)) | Success | (Emoji (char = \127824)) | Success | (Emoji (char = \127829)) | Success | (Emoji (char = \129367)) | Success | (Emoji (char = \128138)) | Success | (Emoji (char = \129385)) | Success | (Emoji (char = \127843)) |
 
-** effect
+*** effect
 
 #+begin_src haskell
 effects = mconcat $ mconcat $ (\(mega,os) -> (\o -> [(k,x) | (k,Just (Object x)) <- [(k,lookup "effect" m') | (k, Just (Object m')) <- [(k, lookup o m) | (k,Object m) <- Data.Aeson.KeyMap.toList mega]]]) <$> os) <$> [(ss,["ability"]), (ps,["level1Ability", "level2Ability", "level3Ability"]), (fs, ["ability"])]
@@ -1206,7 +1200,7 @@ length effects
  #+RESULTS:
  | fromList | ((amount Number 5.0) (kind String DealDamage) (target Object (fromList ((kind String EachEnemy))))) |
 
-** ability
+*** ability
 
 #+begin_src haskell
 allAbilities = mconcat $ mconcat $ (\(mega,os) -> (\o -> [(k,m') | (k, Just (Object m')) <- [(k, lookup o m) | (k,Object m) <- Data.Aeson.KeyMap.toList mega]]) <$> os) <$> [(ss,["ability"]), (ps,["level1Ability", "level2Ability", "level3Ability"]), (fs, ["ability"])]
@@ -1242,7 +1236,7 @@ take 10 bad
 : > > 0
 : []
 
-** probabilities
+*** probabilities
 
 #+begin_src haskell
 pp = [(k, Data.Aeson.KeyMap.lookup "probabilities" m) | (k, Object m) <- toList ps]
@@ -1266,7 +1260,7 @@ length pp
   #+RESULTS:
   : []
 
-*** food probs
+**** food probs
 #+begin_src haskell
 fp = [(k, Data.Aeson.KeyMap.lookup "probabilities" m) | (k, Object m) <- toList fs]
 length fp
@@ -1282,7 +1276,7 @@ length fp
   #+RESULTS:
   : []
 
-** pet
+*** pet
 
 #+begin_src haskell
 bad = Prelude.filter (isNothing . (parseMaybe parseJSON :: Value -> Maybe Pet) . snd) (toList ps)
@@ -1302,8 +1296,7 @@ bad
 : []
 
 
-
-** food
+*** food
 
 #+begin_src haskell :results output
 bad = Prelude.filter (isNothing . (parseMaybe parseJSON :: Value -> Maybe Food) . snd) (toList fs)
@@ -1322,3 +1315,278 @@ bad
 
 #+RESULTS:
 : []
+
+
+* SapData
+
+#+begin_src haskell :results output
+s <- either fail pure =<< mkSapData
+#+end_src
+
+#+RESULTS:
+
+
+#+begin_src haskell :results output
+length $ foods s
+length $ pets s
+length $ statuses s
+length $ turns s
+#+end_src
+
+#+RESULTS:
+: 17
+: 89
+: 10
+: 11
+
+** adhoc error checking
+
+#+begin_src haskell :results output
+head [e|(Error e) <- (fromJSON :: Value -> Result Pet) . snd <$> toList ps]
+#+end_src
+
+#+RESULTS:
+: parsing Status failed, expected Object, but encountered String
+
+#+begin_src haskell :results output
+head $ snd <$> toList ss
+#+end_src
+
+#+RESULTS:
+: Object (fromList [("ability",Object (fromList [("description",String "Attack for 5 more damage."),("effect",Object (fromList [("appliesOnce",Bool False),("damageModifier",Number 5.0),("kind",String "ModifyDamage")])),("trigger",String "WhenAttacking"),("triggeredBy",Object (fromList [("kind",String "Self")]))])),("id",String "status-bone-attack"),("image",Object (fromList [("commit",String "793a6a93f303c08877dd6eb589b2fabb3d1c45ee"),("source",String "twemoji"),("unicodeCodePoint",String "\127830")])),("name",String "Bone Attack")])
+
+
+* Next Steps
+
+- [ ] ~Strategy~
+    strat :: Board -> [Action]
+    strats :: Board -> Actions [Action] ZeroHearts
+- [X] ~Board~
+  - Hearts
+  - Deck
+    Vec 5 (Maybe DeckPet)
+  - DeckPet
+    Pet
+    Attack
+    Heath
+    Status
+  - Shop
+    - PetShop
+      Vec PetShopSize (Maybe (Frozen, Pet))
+    - FoodShop
+      Vec FoodShopSize (Maybe (Frozen, Food))
+    - PetShopSize
+    - FoodShopSize
+    - PetBoosts
+      Attack
+      Health
+
+- [ ] simulate the initial ~Board~
+- [ ] ~Action~
+
+    #+begin_example
+    Shuffle (PetShop (Position Occupied))
+    Recruit (PetShop (Position Occupied)) (Deck (Position Vacancy))
+    Eat (FoodShop (Position Occupied)) (Target (Deck (Position Occupied)) | NoTarget)
+    Roll
+    Fight
+    Freeze (PetShop (Position Occupied))
+    Freeze (FoodShop (Position Occupied))
+    UnFreeze (PetShop (Position Occupied))
+    UnFreeze (FoodShop (Position Occupied))
+    #+end_example
+- [ ] roll :: Shop -> Shop
+- [ ] act :: Action -> Board -> Board
+- [ ] the ~AlwaysRecruit~ ~Strategy~
+
+** probabilities
+
+pets that don't have probabilities
+
+ #+begin_src haskell
+ [k| (k, Nothing) <- second petProbabilities <$> pets s]
+["pet-bee","pet-bus","pet-butterfly","pet-chick","pet-dirty-rat","pet-ram","pet-sloth","pet-zombie-cricket","pet-zombie-fly"]
+ #+end_src
+
+ #+RESULTS:
+ | pet-bee | pet-bus | pet-butterfly | pet-chick | pet-dirty-rat | pet-ram | pet-sloth | pet-zombie-cricket | pet-zombie-fly |
+
+ Tier 1 pets from the StandardPack
+
+ #+begin_src haskell
+ kp = Prelude.filter ((\x -> (List.elem StandardPack . packs $ x) && (isJust . petProbabilities $ x) && (TierN 1 == tier x)) . snd) $ pets s
+ length kp
+ putStrLn $ mconcat $ char . petEmoji . snd <$> kp
+ #+end_src
+
+ #+RESULTS:
+ : 🐜🦫🦗🦆🐟🐎🦟🦦🐖
+
+ #+begin_src haskell
+ sum $ snd <$> (second (fromJust . standardPack . perSlot . head . fromJust . fmap (Prelude.filter ((=="turn-1") . turn)) . petProbabilities) <$> kp)
+ #+end_src
+
+ #+RESULTS:
+ : 1.0000000000000002
+
+ #+begin_src haskell
+ :t turns s
+ :t Turn
+ :i Turn
+ #+end_src
+
+ #+RESULTS:
+ #+begin_example
+ type Turn :: *
+ data Turn
+   = Turn {animalShopSlots :: Int,
+           foodShopSlots :: Int,
+           turnId :: Text,
+           index :: Int,
+           levelUpTier :: Int,
+           livesLost :: Int,
+           turnName :: Text,
+           tiersAvailable :: Int}
+     -- Defined at src/Sap.hs:77:1
+ instance Eq Turn -- Defined at src/Sap.hs:87:30
+ instance Show Turn -- Defined at src/Sap.hs:87:15
+ instance Generic Turn -- Defined at src/Sap.hs:87:21
+ instance FromJSON Turn -- Defined at src/Sap.hs:89:10
+ type instance Rep Turn
+   = D1
+       ('MetaData "Turn" "Sap" "sap-0.0.1-inplace" 'False)
+       (C1
+          ('MetaCons "Turn" 'PrefixI 'True)
+          (((S1
+               ('MetaSel
+                  ('Just "animalShopSlots")
+                  'NoSourceUnpackedness
+                  'NoSourceStrictness
+                  'DecidedLazy)
+               (Rec0 Int)
+             :*: S1
+                   ('MetaSel
+                      ('Just "foodShopSlots")
+                      'NoSourceUnpackedness
+                      'NoSourceStrictness
+                      'DecidedLazy)
+                   (Rec0 Int))
+            :*: (S1
+                   ('MetaSel
+                      ('Just "turnId")
+                      'NoSourceUnpackedness
+                      'NoSourceStrictness
+                      'DecidedLazy)
+                   (Rec0 Text)
+                 :*: S1
+                       ('MetaSel
+                          ('Just "index")
+                          'NoSourceUnpackedness
+                          'NoSourceStrictness
+                          'DecidedLazy)
+                       (Rec0 Int)))
+           :*: ((S1
+                   ('MetaSel
+                      ('Just "levelUpTier")
+                      'NoSourceUnpackedness
+                      'NoSourceStrictness
+                      'DecidedLazy)
+                   (Rec0 Int)
+                 :*: S1
+                       ('MetaSel
+                          ('Just "livesLost")
+                          'NoSourceUnpackedness
+                          'NoSourceStrictness
+                          'DecidedLazy)
+                       (Rec0 Int))
+                :*: (S1
+                       ('MetaSel
+                          ('Just "turnName")
+                          'NoSourceUnpackedness
+                          'NoSourceStrictness
+                          'DecidedLazy)
+                       (Rec0 Text)
+                     :*: S1
+                           ('MetaSel
+                              ('Just "tiersAvailable")
+                              'NoSourceUnpackedness
+                              'NoSourceStrictness
+                              'DecidedLazy)
+                           (Rec0 Int)))))
+     -- Defined at src/Sap.hs:87:21
+ #+end_example
+
+ #+begin_src haskell
+ turns s
+ #+end_src
+
+ #+RESULTS:
+ | turn-1  | Turn | (animalShopSlots = 3 foodShopSlots = 1 turnId = turn-1 index = 1 levelUpTier = 2 livesLost = 1 turnName = Turn 1 tiersAvailable = 1)     |
+ | turn-10 | Turn | (animalShopSlots = 5 foodShopSlots = 2 turnId = turn-10 index = 10 levelUpTier = 6 livesLost = 4 turnName = Turn 10 tiersAvailable = 5)  |
+ | turn-11 | Turn | (animalShopSlots = 5 foodShopSlots = 2 turnId = turn-11 index = 11 levelUpTier = 6 livesLost = 5 turnName = Turn 11+ tiersAvailable = 6) |
+ | turn-2  | Turn | (animalShopSlots = 3 foodShopSlots = 1 turnId = turn-2 index = 2 levelUpTier = 2 livesLost = 1 turnName = Turn 2 tiersAvailable = 1)     |
+ | turn-3  | Turn | (animalShopSlots = 3 foodShopSlots = 2 turnId = turn-3 index = 3 levelUpTier = 3 livesLost = 2 turnName = Turn 3 tiersAvailable = 2)     |
+ | turn-4  | Turn | (animalShopSlots = 3 foodShopSlots = 2 turnId = turn-4 index = 4 levelUpTier = 3 livesLost = 2 turnName = Turn 4 tiersAvailable = 2)     |
+ | turn-5  | Turn | (animalShopSlots = 4 foodShopSlots = 2 turnId = turn-5 index = 5 levelUpTier = 4 livesLost = 3 turnName = Turn 5 tiersAvailable = 3)     |
+ | turn-6  | Turn | (animalShopSlots = 4 foodShopSlots = 2 turnId = turn-6 index = 6 levelUpTier = 4 livesLost = 3 turnName = Turn 6 tiersAvailable = 3)     |
+ | turn-7  | Turn | (animalShopSlots = 4 foodShopSlots = 2 turnId = turn-7 index = 7 levelUpTier = 5 livesLost = 3 turnName = Turn 7 tiersAvailable = 4)     |
+ | turn-8  | Turn | (animalShopSlots = 4 foodShopSlots = 2 turnId = turn-8 index = 8 levelUpTier = 5 livesLost = 3 turnName = Turn 8 tiersAvailable = 4)     |
+ | turn-9  | Turn | (animalShopSlots = 5 foodShopSlots = 2 turnId = turn-9 index = 9 levelUpTier = 6 livesLost = 4 turnName = Turn 9 tiersAvailable = 5)     |
+
+
+** a tier-1 initial roll
+
+ #+begin_src haskell
+ petSlotProbs s StandardPack "turn-1"
+ #+end_src
+
+ #+RESULTS:
+ | pet-ant      | 0.1111111111111111 |
+ | pet-beaver   | 0.1111111111111111 |
+ | pet-cricket  | 0.1111111111111111 |
+ | pet-duck     | 0.1111111111111111 |
+ | pet-fish     | 0.1111111111111111 |
+ | pet-horse    | 0.1111111111111111 |
+ | pet-mosquito | 0.1111111111111111 |
+ | pet-otter    | 0.1111111111111111 |
+ | pet-pig      | 0.1111111111111111 |
+
+#+begin_src haskell
+g <- initStdGen
+p0 = mconcat $ char . petEmoji . (Map.!) (pets s) <$> (flip evalState g $ rvas 3 (cumProbs $ petSlotProbs s StandardPack "turn-1"))
+f0 = mconcat $ char . foodEmoji . (Map.!) (foods s) <$> (flip evalState g $ rvas 1 (cumProbs $ foodSlotProbs s StandardPack "turn-1"))
+putStrLn $ p0 <> " " <> f0
+#+end_src
+
+#+RESULTS:
+: > > 🦟🐎🐟 🍯
+
+#+begin_src haskell
+(cumProbs $ foodSlotProbs s StandardPack "turn-1")
+#+end_src
+
+#+RESULTS:
+| food-apple | 0.5 |
+| food-honey | 1.0 |
+
+** zoom
+
+#+begin_src haskell :results output
+:set -XOverloadedLabels
+:t (\xs -> zoom #gen (rva xs)) :: [(Key, Double)] -> State SapState Key
+:t \t -> zoom #gen ((fmap cumProbs . foodSlotProbs $ t))
+:t \t -> (fmap cumProbs . foodSlotProbs) t
+#+end_src
+
+#+RESULTS:
+:
+: (\xs -> zoom #gen (rva xs)) :: [(Key, Double)] -> State SapState Key
+:   :: [(Key, Double)] -> State SapState Key
+: \t -> zoom #gen ((fmap cumProbs . foodSlotProbs $ t))
+:   :: (Is k A_Lens, LabelOptic "gen" k t t SapState SapState) =>
+:      TurnKey -> StateT t Data.Functor.Identity.Identity [(Key, Double)]
+: \t -> (fmap cumProbs . foodSlotProbs) t
+:   :: TurnKey
+:      -> StateT SapState Data.Functor.Identity.Identity [(Key, Double)]
+
+* simulating a tier 1 fight
